tests/invalid/assert_condition_float_from_str/main.py
def main() -> None:
    assert float("123")
